--- a/requirements.txt
+++ b/requirements.txt
@@ -125,3 +125,8 @@ Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.11.2
 zipp==3.3.0
+honcho==0.7.1
+blinker==1.4
+click==6.7
+gevent==1.2.2
+greenlet==0.4.12
